--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,19 @@ body {
     margin-top: 10px;
     width: 49%;
 }
+
+#myButton {
+    margin-left: 47%;
+    border-radius: 15px;
+    width: 150px;
+    height: 50px;
+    background-color: cadetblue;
+    color: #FFFFE0;
+    font-weight: bold;
+}
+
+#demo img{
+    margin-top: 20px;
+    margin-left: 38%;
+    width: 30%;
+}
